[gd_scene load_steps=47 format=3 uid="uid://csts38tpqne8b"]

[ext_resource type="Script" uid="uid://bsu6yl5002ro5" path="res://player.gd" id="1_fkybt"]
[ext_resource type="Texture2D" uid="uid://b4svysp5yiep1" path="res://assets/Characters/The hero/Hero-walk.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://ch8m6rfgnrmig" path="res://assets/Characters/The hero/Hero-Dead.png" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://c10v7q5s0xfgo" path="res://assets/Characters/The hero/Hero-damaged.png" id="4_8erm5"]
[ext_resource type="Texture2D" uid="uid://5ejgxfheq0c7" path="res://assets/Characters/The hero/Hero-walk WITH LIGHT.png" id="4_tx1dd"]
[ext_resource type="Texture2D" uid="uid://11s2nsieimr3" path="res://assets/Characters/The hero/Hero-idel.png" id="5_f1ek2"]
[ext_resource type="Texture2D" uid="uid://b0ki81ti5sb7j" path="res://assets/Characters/shadow.png" id="6_x3wgy"]
[ext_resource type="Texture2D" uid="uid://ddhm5ldi8yuno" path="res://assets/ui/Layer 21.png" id="7_f1ek2"]
[ext_resource type="Texture2D" uid="uid://e4ps7fdpw3ri" path="res://assets/Characters/light player.png" id="8_gymyn"]
[ext_resource type="Texture2D" uid="uid://o7lcyax0q8ex" path="res://assets/ui/Layer 23 copy 2.png" id="8_tx1dd"]
[ext_resource type="Texture2D" uid="uid://dhyoem1jd364e" path="res://assets/ui/Layer 22.png" id="9_gymyn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("5_f1ek2")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("5_f1ek2")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("5_f1ek2")
region = Rect2(124, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("5_f1ek2")
region = Rect2(186, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_x3wgy")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_x3wgy")
region = Rect2(124, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_x3wgy")
region = Rect2(186, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("4_tx1dd")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("4_tx1dd")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("4_tx1dd")
region = Rect2(124, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("4_tx1dd")
region = Rect2(186, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_3smsa")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_3smsa")
region = Rect2(124, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_3smsa")
region = Rect2(186, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_3smsa")
region = Rect2(248, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_3smsa")
region = Rect2(310, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_3smsa")
region = Rect2(372, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("4_8erm5")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("4_8erm5")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("4_8erm5")
region = Rect2(124, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("4_8erm5")
region = Rect2(186, 0, 62, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ijsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"Idel",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}],
"loop": true,
"name": &"Walk LIGHT",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}],
"loop": true,
"name": &"hurt",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ek2"]
size = Vector2(20, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_gymyn"]
radius = 95.0053

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("8_tx1dd")
region = Rect2(0, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("8_tx1dd")
region = Rect2(28, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("8_tx1dd")
region = Rect2(56, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("8_tx1dd")
region = Rect2(84, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("9_gymyn")
region = Rect2(0, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("9_gymyn")
region = Rect2(28, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("9_gymyn")
region = Rect2(56, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("9_gymyn")
region = Rect2(84, 0, 28, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_wohnl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}],
"loop": true,
"name": &"crying",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}],
"loop": true,
"name": &"normal",
"speed": 9.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 255
collision_mask = 255
script = ExtResource("1_fkybt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 8
sprite_frames = SubResource("SpriteFrames_2ijsl")
animation = &"Walk LIGHT"
autoplay = "Idel"
frame_progress = 0.712687

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_f1ek2")

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.254902)
z_index = 7
position = Vector2(-2, 24)
scale = Vector2(1.32, 0.43)
texture = ExtResource("6_x3wgy")

[node name="Shadow2" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.254902)
z_index = 7
position = Vector2(-3, 20)
scale = Vector2(2.65, 1.16)
texture = ExtResource("6_x3wgy")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 31
visibility_layer = 31
texture_filter = 1
position = Vector2(10, 24)
scale = Vector2(1.73451, 1.375)
enabled = false
color = Color(0.853362, 0.89, 0.7743, 1)
range_item_cull_mask = 1023
texture = ExtResource("8_gymyn")
texture_scale = 1.5
height = 1.0

[node name="FlashlightDetectionArea" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_layer = 32799
collision_mask = 15
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FlashlightDetectionArea"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_gymyn")
debug_color = Color(0.717831, 0.409687, 0.663588, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBarBG" type="TextureRect" parent="UI"]
offset_right = 125.0
offset_bottom = 31.0
scale = Vector2(3, 3)
texture = ExtResource("7_f1ek2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI"]
position = Vector2(52, 51)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_wohnl")
animation = &"crying"
autoplay = "normal"

[node name="HealthBar" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(-0.005, 0)
offset_left = 104.0
offset_top = 29.0
offset_right = 204.0
offset_bottom = 43.0
scale = Vector2(2.51, 2.51)
color = Color(0.482353, 0.0196078, 0.0784314, 1)

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 147.0
offset_top = 18.0
offset_right = 330.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 38
text = "100/100"

[node name="KeyCounter" type="Label" parent="UI"]
offset_left = 18.0
offset_top = 92.0
offset_right = 87.0
offset_bottom = 115.0
text = "Keys: 0/1"

[node name="BatteryLabel" type="Label" parent="UI"]
offset_left = 209.0
offset_top = 119.0
offset_right = 249.0
offset_bottom = 142.0

[node name="BatteryBar" type="ColorRect" parent="UI"]
offset_left = 207.0
offset_top = 96.0
offset_right = 320.0
offset_bottom = 113.0
color = Color(0.85, 0.837817, 0.4845, 1)
